objects/MPW_Form_No_Generator__c.object
<CustomObject>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sequence_No__c</fullName>
        <label>Last Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MPW Form No Generator</label>
    <nameField>
        <label>MPW Form No Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPW Form No Generator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>